--- a/Maruf/requirements.txt
+++ b/Maruf/requirements.txt
@@ -1,8 +1,10 @@
 aiofiles==23.2.1
 aiogram==3.2.0
 aiohttp==3.9.1
+aiohttp-socks==0.8.4
 aiosignal==1.3.1
 annotated-types==0.6.0
+async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.11.17
 dnspython==1.16.0
@@ -14,5 +16,6 @@ pydantic==2.5.2
 pydantic_core==2.14.5
 pymongo==3.11.0
 python-dotenv==1.0.0
+python-socks==2.4.4
 typing_extensions==4.8.0
 yarl==1.9.3
